# controllers/opportunityController.js
@@ -1,4 +1,5 @@
 const Opportunity = require("../models/Opportunity");
+const Application = require("../models/Application");
 
 // Create opportunity
 exports.createOpportunity = async (req, res) => {
@@ -48,6 +49,22 @@ exports.getMyOpportunities = async (req, res) => {
     const opportunities = await Opportunity.find({ postedBy: req.user.id });
     res.json(opportunities);
   } catch (error) {
+    res.status(500).json(error);
+  }
+};
+//get applications for a specific opportunity
+exports.getOpportunityApplications = async (req, res) => {
+  try {
+     // #swagger.tags = ['Opportunities']
+     console.log("called");
+     
+    const opportunityId = req.params.id;
+    const applications = await Application.find({ opportunity: opportunityId })
+      .populate("user", "name email");
+    res.json(applications);
+  } catch (error) {
+    console.log(error);
+    
     res.status(500).json(error);
   }
 };
